3rd & Final Commit Project Completed

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 	<head>
 		<title>Landing Page</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
+
 
 	</head>
 
@@ -39,37 +41,46 @@
 					<p>In rhoncus euismod unc vitae hendrerit augue, non facilisis neque. Maecenas nunc nulla, pharetra non ornare quis, porta vel libero.</p>
 				</footer>
 			</section>
-			<section id="right"></section>
-					<form>
-						<header id="form-header">
-							<h3>Getting Started</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						</header>
+			<section id="right">
+				<form>
+					<header id="form-header">
+						<h3>Getting Started</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+					</header>
+					<div class="form-element">
 						<label>Name*</label>
 						<input type="text" required>
-						<br>
+					</div>
+					<div class="form-element">
 						<label>Email*</label>
 						<input type="email" required >
-						<br>
+					</div>
+					<div class="form-element">
 						<label>Company</label>
 						<input type="text" >
-						<br>
+					</div>
+					<div class="form-element">
 						<label>Phone No:</label>
-						<input type="tel" >
-						<br>
+						<input type="text" >
+					</div>
+					<div class="form-element">
 						<span>* Required Fields</span>
 						<input type="submit" value="Get in Touch">
-						<footer id="form-footer">
-							<p>We would never use any of our subscribers information for anything unspecified</p>
-						</footer>		
-					</form>				
+					</div>	
+					<footer id="form-footer">
+						<hr>
+						<p>We would never use any of our subscribers information for anything unspecified</p>
+					</footer>		
+				</form>				
 			</section>
 			<div class="reset"></div>
 			<section id="testimonial">
 				<img src="Images/testimonial.png" alt="Testimonial Logo">
 				<blockquote>"Donec aliquam felis et fringilla suscipit. Phasellus sed eros at tortor sodales lacinia. Aenean quis tincidunt justo, eget lobortis lectus. Nunc vitae hendrerit augue, non facilisis neque. Maecenas nunc nulla, pharetra non ornare quis, porta vel libero. Quisque eget libero rutrum, condimentum dui a, gravida sapien." - <strong>John Doe Some Company</strong></blockquote>
 			</section>
+			<div class="reset"></div>
 			<footer id="main-footer">
+				<hr>
 				Copyright &copy; 2015
 			</footer>
 		</div> <!-- Container -->
