4th commit - Comments Added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!Doctype>
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>Landing Page</title>
+		<title>Welcome</title>
+<!-- Meta Tag for Responsive Design -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Google Font -->		
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+<!-- Reset CSS file -->		
 		<link rel="stylesheet" type="text/css" href="reset.css">
+<!-- Main CSS file -->		
 		<link rel="stylesheet" type="text/css" href="style.css">
-
-
 	</head>
 
 	<body>
@@ -18,7 +20,7 @@
 				<h1>Welcome to Our Landing Page</h1>
 				<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin neque nisl, fringilla.</h4>
 			</header>
-			<section id="left">
+			<section id="left"> <!-- Left Side Content -->
 				<ul>
 					<li>
 						<img src="Images/number1.png" alt="Point One">
@@ -40,8 +42,8 @@
 					<h3>More About Us</h3>
 					<p>In rhoncus euismod unc vitae hendrerit augue, non facilisis neque. Maecenas nunc nulla, pharetra non ornare quis, porta vel libero.</p>
 				</footer>
-			</section>
-			<section id="right">
+			</section> 
+			<section id="right"> <!-- Right Side Content #Form -->
 				<form>
 					<header id="form-header">
 						<h3>Getting Started</h3>
@@ -73,18 +75,17 @@
 					</footer>		
 				</form>				
 			</section>
-			<div class="reset"></div>
+			<div class="reset"></div> <!-- Reset Div - To reset float -->
 			<section id="testimonial">
 				<img src="Images/testimonial.png" alt="Testimonial Logo">
 				<blockquote>"Donec aliquam felis et fringilla suscipit. Phasellus sed eros at tortor sodales lacinia. Aenean quis tincidunt justo, eget lobortis lectus. Nunc vitae hendrerit augue, non facilisis neque. Maecenas nunc nulla, pharetra non ornare quis, porta vel libero. Quisque eget libero rutrum, condimentum dui a, gravida sapien." - <strong>John Doe Some Company</strong></blockquote>
 			</section>
-			<div class="reset"></div>
+			<div class="reset"></div> <!-- Reset Div - To reset float -->
 			<footer id="main-footer">
 				<hr>
 				Copyright &copy; 2015
 			</footer>
 		</div> <!-- Container -->
-
-		
+	
 	</body>
 </html>
