Changed css file to LESS

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 		<title>Welcome</title>
 <!-- Meta Tag for Responsive Design -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Google Font -->		
+<!-- Google Font -->
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-<!-- Reset CSS file -->		
+<!-- Reset CSS file -->
 		<link rel="stylesheet" type="text/css" href="reset.css">
-<!-- Main CSS file -->		
+<!-- Main CSS file -->
 		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<link rel="stylesheet" type="text/css" href="less-style.css">
 	</head>
 
 	<body>
@@ -27,7 +29,7 @@
 						<h4>Point One</h4>
 						<p>Donec aliquam felis et fringilla suscipit. Phasellus sed eros at tortor sodales lacinia. Aenean quis tincidunt justo, eget lobortis lectus. Nunc vitae hendrerit augue, non facilisis neque.</p>
 					</li>
-					<li>	
+					<li>
 						<img src="Images/number2.png" alt="Point Two">
 						<h4>Point Two</h4>
 						<p>Donec aliquam felis et fringilla suscipit. Phasellus sed eros at tortor sodalen quis tincidunt justo, eget lobortis lectus. Nunc vitae hendrerit augue, non facilisis neque.</p>
@@ -42,7 +44,7 @@
 					<h3>More About Us</h3>
 					<p>In rhoncus euismod unc vitae hendrerit augue, non facilisis neque. Maecenas nunc nulla, pharetra non ornare quis, porta vel libero.</p>
 				</footer>
-			</section> 
+			</section>
 			<section id="right"> <!-- Right Side Content #Form -->
 				<form>
 					<header id="form-header">
@@ -68,12 +70,12 @@
 					<div class="form-element">
 						<span>* Required Fields</span>
 						<input type="submit" value="Get in Touch">
-					</div>	
+					</div>
 					<footer id="form-footer">
 						<hr>
 						<p>We would never use any of our subscribers information for anything unspecified</p>
-					</footer>		
-				</form>				
+					</footer>
+				</form>
 			</section>
 			<div class="reset"></div> <!-- Reset Div - To reset float -->
 			<section id="testimonial">
@@ -86,6 +88,6 @@
 				Copyright &copy; 2015
 			</footer>
 		</div> <!-- Container -->
-	
+
 	</body>
 </html>
