--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
 	<head>
+		<meta charset="utf-8">
 		<title>Welcome</title>
 <!-- Meta Tag for Responsive Design -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
